# conformal_examples_py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: 0-split-cp-intro.py  1-cp-vs-freq-vs-bayes.py  2-text-classification.py  3-motor-insurance.py
