[project]
name = "conformal-examples-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.4.1",
    "kaggle>=1.6.17",
    "marimo>=0.9.16",
    "numpy>=2.1.3",
    "optuna>=4.0.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "vegafusion[embed]>=1.6.9",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
